# izu-core

./: .gitignore  README.md  README_temp  notes.txt  pyproject.toml
channel_id/: __init__.py  abm_design_audit.py  abm_recovery.py  ardens_nonreport_envelope.py  ardens_step_persistence_smc.py  biological_positive_control.py  camera_visit_handling.py  campanula_candidate_label_audit.py  campanula_environmental_adversary.py  campanula_interior_candidates.py  candidate_registry.py  confounding.py  current_evidence_state.py  empirical_evidence_lock.py  field_flower_geometry.py  field_guide_photo_review.py  field_guide_reconcile.py  field_legitimate_contact.py  field_multichannel_coverage.py  flower_length_comparability.py  flower_roi_signature.py  gbif_photo_review_filter.py  gbif_trait_photos.py  gradient_shape.py  guide_design_power.py  guide_evidence_registry.py  guide_inbreeding.py  guide_multiguild.py  guide_phenotype.py  guide_photo_review.py  guide_review_audit.py  guide_review_progress.py  guide_scan_calibration.py  guide_scenarios.py  guide_spatial.py  guide_temporal.py  inaturalist_photo_proxy_queue.py  inaturalist_trait_photos.py  island_multichannel.py  island_source_level.py  (+44 more)
config/: izu_public_data_source_lock.json  izu_supplemental_gbif_source.json
configs/: guide_evidence_discovery_queries.csv  izu_comparative_taxon_discovery_queries.csv  izu_gbif_snapshot_targets.json  izu_inaturalist_snapshot_targets.json  izu_island_proxy_points.json  izu_study_locality_geocoding_targets.json
data/: ardens_step_persistence_stages.csv  candidate_lineages.csv  (+9 more)
(+449 files in other folders)
